tests/fixtures/invalid/unresolved-reference.nml
// References a resource list that doesn't exist
service BrokenService:
    localMount = "/"
    resources = nonExistentResources
